# Connexio

./: .eslintrc.cjs  .gitignore  .tauri-key.pub  CHANGELOG.md  COMPETITIVE_RESEARCH.md  CONTRIBUTING.md  README.md  RELEASE.md  SESSION_NOTES.md  build-release.bat  build-release.ps1  build-signed.ps1  build.bat  dev.bat  diagnose.bat  latest.json  package-lock.json  package.json  release-help.bat  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: download-stats.yml  release.yml
_bmad-output/implementation-artifacts/: 1-1-initialize-tauri-project-with-react-template.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  bmm-workflow-status.yaml  connexio-notes.md  epics.md  implementation-readiness-report-2026-01-14.md  prd.md  product-brief-Connexio-2026-01-14.md  ux-design-specification.md
_bmad-output/session-notes/: 2026-01-15-session.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
connexio-marketing/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
connexio-marketing/src/app/: globals.css  layout.tsx  page.tsx
connexio-marketing/src/lib/: utils.ts
docs/: architecture.md  component-inventory.md  deployment-guide.md  development-guide.md  index.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
scripts/: build-installer.ps1  build-portable.ps1  bump-version.cjs  download-stats.ps1  register-context-menu.ps1  register-default-terminal.ps1  release.cjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  test_tty.rs
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: cli.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs  pty_commands.rs
src-tauri/src/csh/: ast.rs  completion.rs  environment.rs  executor.rs  history.rs  lexer.rs  mod.rs  parser.rs  pipes.rs  readline.rs  redirect.rs  script.rs  shell.rs
src-tauri/src/csh/builtins/: alias.rs  cat.rs  cd.rs  clear.rs  echo.rs  env_cmd.rs  exit.rs  export.rs  help.rs  history_cmd.rs  ls.rs  mod.rs  pwd.rs  set.rs  unset.rs  which.rs
src-tauri/src/pty/: manager.rs  mod.rs  types.rs
src-tauri/wix/: context-menu.wxs
src/components/layout/: MainLayout.tsx  TabBar.tsx  TitleBar.tsx  index.ts
src/components/terminal/: TerminalViewport.tsx  index.ts
src/components/ui/: AboutDialog.tsx  SettingsDialog.tsx  ThemePicker.tsx  UpdateDialog.tsx  WorkspaceManagerDialog.tsx  WorkspaceSidebar.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  (+3 more)
src/lib/: tauri.ts  themes.ts  workspace-utils.ts
src/stores/: index.ts  sessionStore.test.ts  sessionStore.ts  settingsStore.ts  themeStore.ts
src/styles/: globals.css
src/test/: setup.ts
src/types/: index.ts  terminal.types.ts  theme.types.ts
(+10 files in other folders)
